2008-10-03  Andreas Kupries  <andreask@activestate.com>

	* generic/memchanInt.h: Fixed [SF Bug 2078168] by Larry Virden
	  <lvirden@users.sourceforge.net>. Added inclusion of header
	  <string.h> to get declarations for strcmp, memcpy, and memset.

2007-11-13  Andreas Kupries  <andreask@activestate.com>

	* teapot.txt: New file, basic meta data of the package for TEApot
	  compatible repositories.

2006-05-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* Makefile.in:      Fixed make test target.

2006-01-24  Andreas Kupries <andreask@activestate.com>

	* tclconfig/tcl.m4: Updated to TEA 3.5
	* configure.in:     Ditto.
	* configure:        Regenerated.

2005-06-08  Andreas Kupries <andreask@activestate.com>

	* Makefile.in: Updated the toplevel build system to TEA 3.2.
	* configure.in:
	* generic/init.c:
	* generic/memchanStubLib.c:
	* tclconfig/tcl.m4:

2004-11-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* Makefile.in: Fix the unix build system for the stubs
	stuff. Verified that the generated stubs lib can be used in an
	extension (make chantest target).

2004-11-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/memchanapi.man: NEW documentation for the stubs API functions.

	* generic/memchan.c:  Fix and test for bug #1060620 which shows a
	* tests/memchan.test: problem using fileevent on memchan channels

	* generic/fifo2.c: Added special case for attempts to build on
	threaded tcl 8.2. This version doesn't support Tcl_MutexFinalize
	and we would leak mutexes from fifo2. Provided error stub
	functions and included a #error so that anyone attempting to build
	under these conditions will know what the problem is.

	* generic/null.c:        Fix for compilation with tcl 8.2 and above.
	* generic/random.c:
	* generic/zero.c:
	* generic/memchanInt.h:

2004-11-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/memchan.h:          Added a stubs library for the Memchan
	* generic/memchan.decls:      extension. This exposes an API that